added the : in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https//SangeethanY.github.io/SpaceX-GraphQl-React",
+  "homepage": "https://SangeethanY.github.io/SpaceX-GraphQl-React",
   "name": "graph-react",
   "version": "0.1.0",
   "private": true,
