change the private is false in package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://SangeethanY.github.io/SpaceX-GraphQl-React",
   "name": "graph-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@emotion/react": "^11.11.1",
